--- a/client/package.json
+++ b/client/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "chart.js": "^4.4.2",
+    "chartjs-adapter-dayjs-4": "^1.0.4",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.11",
     "next": "14.2.3",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-icons": "^5.2.0",
     "recoil": "^0.7.7",
     "sonner": "^1.4.41",
-    "tailwind-merge": "^2.3.0"
+    "tailwind-merge": "^2.3.0",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/node": "^20",
