--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ version: "3.8"
 services:
   backend:
     build: .
-    expose:
-      - "3001:3001"
+    ports:
+      - "3000:3000"
     depends_on:
       - prometheus
       - redis
@@ -15,7 +15,7 @@ services:
       - "9091:9090"
     restart: unless-stopped
     volumes:
-      - ./prometheus:/etc/prometheus
+      - ./pkg/prometheus:/etc/prometheus
       - prom_data:/prometheus
 
   redis:
