--- a/pkg/prometheus/prometheus.yml
+++ b/pkg/prometheus/prometheus.yml
@@ -5,4 +5,4 @@ global:
 scrape_configs:
   - job_name: "prometheus"
     static_configs:
-      - targets: ["host.docker.internal:3001"]
+      - targets: ["localhost:3000"]
