--- a/compose-dev.yml
+++ b/compose-dev.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   backend:
     build: .
@@ -8,11 +6,15 @@ services:
     depends_on:
       - prometheus
       - redis
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+
+
   prometheus:
     container_name: prometheus
     image: prom/prometheus
     ports:
-      - "9091:9090"
+      - "9090:9090"
     restart: unless-stopped
     volumes:
       - ./pkg/prometheus:/etc/prometheus
