--- a/client/package.json
+++ b/client/package.json
@@ -1,34 +1,42 @@
 {
-  "name": "client",
-  "version": "0.1.0",
+  "name": "client2",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "chart.js": "^4.4.2",
+    "chart.js": "^4.4.4",
     "chartjs-adapter-dayjs-4": "^1.0.4",
     "clsx": "^2.1.1",
-    "dayjs": "^1.11.11",
-    "next": "14.2.3",
-    "react": "^18",
+    "dayjs": "^1.11.13",
+    "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18",
-    "react-icons": "^5.2.0",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.27.0",
     "recoil": "^0.7.7",
-    "sonner": "^1.4.41",
-    "tailwind-merge": "^2.3.0",
-    "tailwind-scrollbar-hide": "^1.1.7"
+    "sonner": "^1.5.0",
+    "tailwind-merge": "^2.5.3"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "@eslint/js": "^9.11.1",
+    "@types/react": "^18.3.10",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.2",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.11.1",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.12",
+    "globals": "^15.9.0",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^8.7.0",
+    "vite": "^5.4.8"
   }
 }
