--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-PORT=":3000"
+PORT=":3001"
 DB_CONNSTR="postgresql://postgres:123456@host.docker.internal:5432/shrinkr?sslmode=disable"
-PROM_URL="http://prometheus:9090"
+PROM_URL=http://prometheus:9090
 SECRET=secret
 SITE_URL="http://localhost:5173"
 SUB_FREE="free"
