--- a/compose-dev.yml
+++ b/compose-dev.yml
@@ -3,6 +3,8 @@ services:
     build: .
     ports:
       - "3000:3000"
+    volumes:
+      - .:/usr/src/app
     depends_on:
       - prometheus
       - redis
