--- a/pkg/prometheus/prometheus.yml
+++ b/pkg/prometheus/prometheus.yml
@@ -1,8 +1,8 @@
 global:
-  scrape_interval: 1m
-  evaluation_interval: 15s
+  scrape_interval: 20s
+  evaluation_interval: 10s
 
 scrape_configs:
   - job_name: "prometheus"
     static_configs:
-      - targets: ["localhost:3000"]
+      - targets: ["backend:3000"]
