--- a/compose-dev.yml
+++ b/compose-dev.yml
@@ -6,11 +6,27 @@ services:
     volumes:
       - .:/usr/src/app
     depends_on:
-      - prometheus
-      - redis
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
+      db:
+        condition: service_healthy
+      prometheus:
+        condition: service_started
+      redis:
+        condition: service_started
 
+  db:
+    image: postgres
+    volumes:
+      - db_data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_DB=shrinkr
+      - POSTGRES_PASSWORD=postgres
+    ports:
+      - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 4s
+      timeout: 2s
+      retries: 5
 
   prometheus:
     container_name: prometheus
@@ -31,3 +47,4 @@ services:
 
 volumes:
   prom_data:
+  db_data:
